--- a/Copy_of_DAwP_Assignment_2.ipynb
+++ b/Copy_of_DAwP_Assignment_2.ipynb
@@ -694,8 +694,7 @@
       },
       "source": [
         "jobCount=sal.groupby('JobTitle')['JobTitle'].value_counts().sort_values(ascending=False)\n",
-        "commonJob=jobCount.head(5)\n",
-        "print(commonJob.index)"
+        "commonJob=jobCount.head(5)\n"
       ],
       "execution_count": 0,
       "outputs": [
